fixed spacing

--- a/app/assets/stylesheets/components/_candidate_cards.scss
+++ b/app/assets/stylesheets/components/_candidate_cards.scss
@@ -3,11 +3,11 @@
   flex-wrap: wrap;
   width: 60%;
   overflow-y:scroll;
-  height:200px;
+  height:360px;
 }
 
 #candidate {
   min-width: 240px;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
